--- a/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
+++ b/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
@@ -38,20 +38,20 @@ STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 //STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
 //WS_SYSMENU | WS_MAXIMIZEBOX | WS_THICKFRAME
-CAPTION "Plugins Admin"
+CAPTION "插件管理"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x0
 BEGIN
-	RTEXT           "Search: ",IDC_PLUGINADM_SEARCH_STATIC,50,38,50,8
+	RTEXT           "搜索: ",IDC_PLUGINADM_SEARCH_STATIC,50,38,50,8
 	EDITTEXT        IDC_PLUGINADM_SEARCH_EDIT,160,35,150,14,ES_AUTOHSCROLL
-	PUSHBUTTON      "Next", IDC_PLUGINADM_RESEARCH_NEXT,332,35,57,14
-	PUSHBUTTON      "Install", IDC_PLUGINADM_INSTALL,432,35,57,14
-	PUSHBUTTON      "Update", IDC_PLUGINADM_UPDATE,432,35,57,14
-	PUSHBUTTON      "Remove", IDC_PLUGINADM_REMOVE,432,35,57,14
+	PUSHBUTTON      "下一个", IDC_PLUGINADM_RESEARCH_NEXT,332,35,57,14
+	PUSHBUTTON      "安装", IDC_PLUGINADM_INSTALL,432,35,57,14
+	PUSHBUTTON      "更新", IDC_PLUGINADM_UPDATE,432,35,57,14
+	PUSHBUTTON      "移除", IDC_PLUGINADM_REMOVE,432,35,57,14
 	//LISTBOX         IDC_PLUGINADM_LISTVIEW,30,20,78,120,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP ES_AUTOHSCROLL
 	EDITTEXT        IDC_PLUGINADM_EDIT,30,160,220,80,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_BORDER | WS_VSCROLL
 	//EDITTEXT        IDC_PLUGINADM_EDIT,30,160,220,80,ES_MULTILINE  | ES_READONLY | WS_VSCROLL | WS_HSCROLL | NOT WS_TABSTOP
 	
-	PUSHBUTTON      "Close", IDCANCEL, 225, 350, 57, 14
+	PUSHBUTTON      "关闭", IDCANCEL, 225, 350, 57, 14
 
 	//PUSHBUTTON      "Close", IDCANCEL,332,270,57,14
     //PUSHBUTTON      "Settings",IDC_PLUGINADM_SETTINGS_BUTTON,255,270,69,14
