--- a/PowerEditor/src/WinControls/WindowsDlg/WindowsDlg.rc
+++ b/PowerEditor/src/WinControls/WindowsDlg/WindowsDlg.rc
@@ -1,4 +1,4 @@
-// This file is part of Notepad++ project
+﻿// This file is part of Notepad++ project
 // Copyright (C)2020 Don HO <don.h@free.fr>
 //
 // This program is free software; you can redistribute it and/or
@@ -31,25 +31,25 @@
 
 IDD_WINDOWS DIALOGEX 0, 0, 450, 300
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME | DS_MODALFRAME
-CAPTION "Windows"
+CAPTION "窗口"
 FONT 8, TEXT("MS Shell Dlg"), 400, 0, 0x1
 BEGIN
     CONTROL         "", IDC_WINDOWS_LIST, TEXT("SysListView32"), LVS_REPORT | LVS_OWNERDATA | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP, 7, 7, 206, 160
-    DEFPUSHBUTTON   "&Activate",IDOK,219,7,60,14
-    PUSHBUTTON      "&Save",IDC_WINDOWS_SAVE,219,26,60,14
-    PUSHBUTTON      "&Close window(s)",IDC_WINDOWS_CLOSE,219,44,60,14
-    PUSHBUTTON      "Sort &tabs",IDC_WINDOWS_SORT,219,60,60,14
-    PUSHBUTTON      "&OK",IDCANCEL,219,169,60,14
+    DEFPUSHBUTTON   "激活(&A)",IDOK,219,7,60,14
+    PUSHBUTTON      "保存文件(&S)",IDC_WINDOWS_SAVE,219,26,60,14
+    PUSHBUTTON      "关闭文件(&C)",IDC_WINDOWS_CLOSE,219,44,60,14
+    PUSHBUTTON      "文件排序(&T)",IDC_WINDOWS_SORT,219,60,60,14
+    PUSHBUTTON      "确定(&O)",IDCANCEL,219,169,60,14
 END
 
 IDR_WINDOWS_MENU MENU
 BEGIN
 	MENUITEM "Recent Window",              IDM_WINDOW_MRU_FIRST, GRAYED
-	MENUITEM "&Windows...",               	IDM_WINDOW_WINDOWS
+	MENUITEM "窗口(&W)...",               	IDM_WINDOW_WINDOWS
 END
 
 
 STRINGTABLE
 BEGIN
-	IDR_WINDOWS_MENU "&Window"
+	IDR_WINDOWS_MENU "窗口(&W)"
 END
